--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "rostislav.simonik@technologystudio.sk",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "tsc --noEmit"
   },
